fix: Improve scrolling in library content page
